crates/config/tests/snapshots/blank_line_in_prefix_block.snap
---
source: crates/config/tests/snapshots.rs
---
# blank-line-in-prefix-block

## Input

```mical
s {
  a 1

  b 2
}

```

## JSON

```json
{
  "sa": 1,
  "sb": 2
}
```

vim:ft=markdown
