crates/config/tests/snapshots/blank_lines_between_entries.snap
---
source: crates/config/tests/snapshots.rs
---
# blank-lines-between-entries

## Input

```mical
a 1

b 2
   
c 3

```

## JSON

```json
{
  "a": 1,
  "b": 2,
  "c": 3
}
```

vim:ft=markdown
