crates/config/tests/snapshots/block_string_0_folded_clip_none_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-folded-clip-none-dedent

## Input

```mical
key >
other val

```

## JSON

```json
{
  "key": "",
  "other": "val"
}
```

vim:ft=markdown
