crates/config/tests/snapshots/block_string_0_folded_clip_none_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-folded-clip-none-eof

## Input

```mical
key >

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
