crates/config/tests/snapshots/block_string_0_folded_clip_wsln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-folded-clip-wsln-eof

## Input

```mical
key >
 

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
