crates/config/tests/snapshots/block_string_0_folded_keep_emptyln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-folded-keep-emptyln-eof

## Input

```mical
key >+


```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
